# powerArm

./: .gitignore  README.md
powerArm_control_ws/: .~lock.raw_data_3_29_post.xlsx#  4_dynamics.ipynb  ARM_234_joint.xlsx  cartesian_circle_points.txt  circle_fixed.py  circle_points.txt  circle_tau.npy  circle_traj.npz  data_w_6axis_torque_sensor.xlsx  free_impedance_velocity.py  homing.py  homing_cp.py  impedance.py  impedance_tau.py  impedance_velocity.py  impedance_velocity_test.py  joint_output.txt  nearest_point.py  opt_circle_points.txt  opt_q.txt  optimization.py  optimization_sensor.py  optimized_params.npy  optimized_params_2.npy  optimized_q.npy  polynomial_opt.py  powerarm_control_pinocchio.py  raw_data_3_29_post.xlsx  start.py  stop.py  test.py  test_J2T.py  test_no_offset.npy  test_pt.txt  trajectory_optm.py  transparency.py  transparency_org.py  utilities.py  wrench_offset.npy
powerArm_control_ws/ARM_Control_w_UI/: GUI.py  PyGalaxian.py  circle_fixed.py  homing.py  transparency_tau_w_6doft.py  transparency_tau_w_6doft_add_z.py  transparency_tau_w_6doft_test.py
powerArm_control_ws/ARM_Control_w_UI/legacy_code/fix_traj/: circle_fixed.py  circle_points.txt
powerArm_control_ws/ARM_Control_w_UI/legacy_code/transparent_control/: transparency.py  transparency_tau.py  transparency_tau_w_6doft.py
powerArm_control_ws/_tps_robotique-main/: 2_inv_geom.ipynb  3_invkine.ipynb
powerarm_ws/: bernoulli_points.txt  points.txt
powerarm_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
powerarm_ws/log/: latest_build  latest_list
powerarm_ws/src/powerarm/: CMakeLists.txt  package.xml
powerarm_ws/src/powerarm/src/: powerarm_control_IK (copy).cpp  powerarm_control_IK.cpp  powerarm_control_bernoulli.cpp  powerarm_state_combine.cpp  powerarm_state_copy.cpp
powerarm_ws/src/powerarm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  powerarm_urdf.ros2_control.xacro
powerarm_ws/src/powerarm_moveit_config/launch/: rsp.launch.py  (+1 more)
powerarm_ws/src/powerarm_urdf/: CMakeLists.txt
powerarm_ws_gazebo/: bernoulli_points.txt  cmd.txt  my_send_goal.sh  note.txt  points.txt  powerarm_urdf.gv
powerarm_ws_gazebo/install/: local_setup.sh  setup.sh
powerarm_ws_gazebo/install/powerarm_urdf/share/powerarm_urdf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
powerarm_ws_gazebo/install/powerarm_urdf/share/powerarm_urdf/cmake/: powerarm_urdfConfig-version.cmake  powerarm_urdfConfig.cmake
powerarm_ws_gazebo/install/powerarm_urdf/share/powerarm_urdf/config/: joint_names_powerarm_urdf.yaml
powerarm_ws_gazebo/install/powerarm_urdf/share/powerarm_urdf/environment/: ament_prefix_path.dsv  path.dsv
powerarm_ws_gazebo/install/powerarm_urdf/share/powerarm_urdf/launch/: display.launch  gazebo.launch
powerarm_ws_gazebo/install/powerarm_urdf/share/powerarm_urdf/meshes/: base_link.STL  ee_link.STL  elbow_link.STL  shoulder_link_1.STL  shoulder_link_2.STL  shoulder_link_3.STL
powerarm_ws_gazebo/install/powerarm_urdf/share/powerarm_urdf/urdf/: powerarm_urdf.csv  powerarm_urdf.urdf
powerarm_ws_gazebo/src/powerarm_moveit_config/: CMakeLists.txt
powerarm_ws_gazebo/src/powerarm_urdf/: CMakeLists.txt
(+127 files in other folders)
