<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>powerarm_urdf</name>
  <version>0.0.0</version>
  <description>
    <p>URDF Description package for powerarm_urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for powerarm_urdf robot</p>
  </description>
  <author>Wenda</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
